--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,9 +1,8 @@
 .profile-text{
-    padding-top: 50px;
+    padding-top: 100px;
     padding-right: 20rem;
 }
 
 .profile-body{
-    padding-top: 100px;
-    padding-right: 0px;
+    padding: 0px;
 }
