--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,8 +1,22 @@
 .profile-text{
     padding-top: 100px;
-    padding-right: 20rem;
+    padding-right: 0rem;
 }
 
 .profile-body{
     padding: 0px;
+}
+
+.trn-header{
+  height: 100%;
+  width: 100%;
+  background-image: -webkit-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f); /* For Chrome 25 and Safari 6, iOS 6.1, Android 4.3 */
+  background-image:    -moz-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f);/* For Firefox (3.6 to 15) */
+  background-image:      -o-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f); /* For old Opera (11.1 to 12.0) */ 
+  background-image:         linear-gradient(to right, hsla(0, 0%, 100%, 0), 90%, #00345f); /* Standard syntax; must be last */
+
+}
+
+.bg-wdr{
+  background: #00345f;
 }
