--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -10,17 +10,26 @@
 .trn-header{
   height: 100%;
   width: 100%;
-  background-image: -webkit-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f); /* For Chrome 25 and Safari 6, iOS 6.1, Android 4.3 */
-  background-image:    -moz-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f);/* For Firefox (3.6 to 15) */
-  background-image:      -o-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #00345f); /* For old Opera (11.1 to 12.0) */ 
-  background-image:         linear-gradient(to right, hsla(0, 0%, 100%, 0), 90%, #00345f); /* Standard syntax; must be last */
+  background-image: -webkit-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #83B4E2 ); /* For Chrome 25 and Safari 6, iOS 6.1, Android 4.3 */
+  background-image:    -moz-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #83B4E2 );/* For Firefox (3.6 to 15) */
+  background-image:      -o-linear-gradient(left, hsla(0, 0%, 100%, 0), 90%, #83B4E2 ); /* For old Opera (11.1 to 12.0) */ 
+  background-image:         linear-gradient(to right, hsla(0, 0%, 100%, 0), 90%, #83B4E2 ); /* Standard syntax; must be last */
 
 }
 
 .bg-wdr{
-  background: #00345f;
+  background: #1A3459;
 }
 
 #trn-back-button, .profile-card{
   cursor: pointer;
+}
+
+#answer_commit_btn{
+  background-color: #83B4E2;
+  border-color: #83B4E2;
+}
+
+.boder-left-trainee-profile{
+  border-left: .25rem solid #1A3459 !important;
 }
